# gos

./: Cargo.toml  README.md  README.zh_cn.md  config.yaml
src/: config.rs  constants.rs  license.rs  main.rs
template/: main.tpl
